--- a/app/src/main/res/layout/activity_black_bear.xml
+++ b/app/src/main/res/layout/activity_black_bear.xml
@@ -25,7 +25,7 @@
 
 
     <ImageButton
-        android:id="@+id/beer"
+        android:id="@+id/cocktail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
@@ -35,12 +35,12 @@
         android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:id="@+id/donut"
+        android:id="@+id/cheese"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_donut"
-        android:layout_alignTop="@+id/beer"
+        android:layout_alignTop="@+id/cocktail"
         android:layout_toLeftOf="@+id/predict"
         android:layout_toStartOf="@+id/predict" />
 
@@ -51,16 +51,16 @@
         android:textSize="30dp"
         android:id="@+id/textView2"
         android:layout_marginBottom="14dp"
-        android:layout_above="@+id/beer"
+        android:layout_above="@+id/cocktail"
         android:layout_centerHorizontal="true" />
 
     <ImageButton
-        android:id="@+id/cheeseburger"
+        android:id="@+id/grapes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_burger"
-        android:layout_alignTop="@+id/beer"
+        android:layout_alignTop="@+id/cocktail"
         android:layout_toRightOf="@+id/predict"
         android:layout_toEndOf="@+id/predict" />
 
