--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,21 +20,6 @@
         android:layout_marginBottom="78dp" />
 
     <Button
-        android:id="@+id/brownBear"
-        android:text="@string/brown_bear_button_text"
-        android:textSize="15dp"
-        android:textColor="#ffffff"
-        android:background="#690000"
-        android:layout_width="110dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="73dp"
-        android:layout_marginStart="73dp"
-        android:layout_marginBottom="19dp" />
-
-    <Button
         android:id="@+id/blackBear"
         android:text="@string/black_bear_button_text"
         android:textSize="15dp"
@@ -42,11 +27,27 @@
         android:background="#690000"
         android:layout_width="110dp"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/brownBear"
+        android:layout_marginRight="58dp"
+        android:layout_marginEnd="58dp"
+        android:layout_alignBaseline="@+id/brownBear"
+        android:layout_alignBottom="@+id/brownBear"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="72dp"
-        android:layout_marginEnd="72dp" />
+        android:layout_alignParentEnd="true" />
+
+    <Button
+        android:id="@+id/brownBear"
+        android:text="@string/brown_bear_button_text"
+        android:textSize="15dp"
+        android:textColor="#ffffff"
+        android:background="#690000"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginBottom="19dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
